@@ -320,7 +320,7 @@ struct subprocess_data {
 static void
 subprocess_launcher(int id, void *data)
 {
-    int count, aborted;
+    int count;
     int ac = 8;
     char *line = (char *)bu_calloc(MAXPATHLEN+501, sizeof(char), "resultstr");
     const char *av[9];
@@ -355,7 +355,7 @@ subprocess_launcher(int id, void *data)
 	memset(line, 0, MAXPATHLEN+501);
     }
 
-    if (bu_process_wait(&aborted, p, 120)) {
+    if (bu_process_wait_n(p, 120)) {
 	bu_vls_printf(sd->sd_result, "Test %ld(process %ld): rt_cache_subprocess failed\n", sd->test_num, sd->process_num);
 	sd->result = 1;
     }
